--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,8 +10,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/TestMap.TestMap
-GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
+GameDefaultMap=/Game/Maps/TestMap.TestMap
 GlobalDefaultGameMode=/Game/Blueprints/Game/HeatwaveGameMode.HeatwaveGameMode_C
+
+[/Script/HTML5PlatformEditor.HTML5TargetSettings]
+Compressed=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -55,5 +58,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
