--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,12 +10,12 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/TestMap.TestMap
-GameDefaultMap=/Game/Maps/TestMap.TestMap
+GameDefaultMap=/Game/Maps/DemoMaps/Demo_1.Demo_1
 GlobalDefaultGameMode=/Game/Blueprints/Game/HeatwaveGameMode.HeatwaveGameMode_C
 GameInstanceClass=/Game/Blueprints/Game/HeatwaveGameInstance.HeatwaveGameInstance_C
 
 [/Script/HTML5PlatformEditor.HTML5TargetSettings]
-Compressed=True
+Compressed=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -59,4 +59,5 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
 
