--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/TestMap.TestMap
-GameDefaultMap=/Game/Maps/DemoMaps/Demo_1.Demo_1
+GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 GlobalDefaultGameMode=/Game/Blueprints/Game/GameRules/HeatwaveGameMode.HeatwaveGameMode_C
 GameInstanceClass=/Game/Blueprints/Game/GameRules/HeatwaveGameInstance.HeatwaveGameInstance_C
 
